fix overflow-y

--- a/styleShowCard.css
+++ b/styleShowCard.css
@@ -36,6 +36,7 @@
     background-color: #C2C2C2;
     border-radius: 20px;
     padding: 10px;
+    overflow-y: auto;
 }
 
 /* CARD-MIDDLE */
